--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -259,6 +259,9 @@ services:
   web3:
     image: gcr.io/mirrornode/hedera-mirror-web3:0.49.0
     container_name: mirror-node-web3
+    mem_swappiness: 0
+    mem_limit: 512m
+    memswap_limit: 512m
     depends_on:
       network-node:
         condition: service_started
