--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -242,6 +242,9 @@ services:
   rest:
     image: gcr.io/mirrornode/hedera-mirror-rest:0.49.0
     container_name: mirror-node-rest
+    mem_swappiness: 0
+    mem_limit: 512m
+    memswap_limit: 512m
     depends_on:
       network-node:
         condition: service_started
