[Automated Update] Hedera Configuration Files
Signed-off-by: GitHub <noreply@github.com>

--- a/compose-network/network-node/data/config/api-permission.properties
+++ b/compose-network/network-node/data/config/api-permission.properties
@@ -49,17 +49,18 @@ tokenBurn=0-*
 tokenAccountWipe=0-*
 tokenUpdate=0-*
 tokenGetInfo=0-*
-tokenGetNftInfo=0-*
-tokenGetNftInfos=0-*
 tokenGetAccountNftInfos=0-*
 tokenAssociateToAccount=0-*
 tokenDissociateFromAccount=0-*
+tokenGetNftInfo=0-*
 tokenFeeScheduleUpdate=0-*
 tokenPause=0-*
 tokenUnpause=0-*
+tokenGetNftInfos=0-*
 # Network 
 getVersionInfo=0-*
-networkGetExecutionTime=2-50
 systemDelete=2-59
 systemUndelete=2-60
 freeze=2-58
+uncheckedSubmit=2-50
+networkGetExecutionTime=2-50
