--- a/.github/workflows/update-config-files.yaml
+++ b/.github/workflows/update-config-files.yaml
@@ -16,11 +16,12 @@ env:
   REMOTE_REPO_OWNER: hashgraph
   REMOTE_REPO_NAME: hedera-services
   REMOTE_CONFIG_PATH: master/hedera-node/configuration
-  REMOTE_CONFIG_PROFILE: dev
+  REMOTE_CONFIG_PROFILE: previewnet
   REPO_CONFIG_PATH: compose-network/network-node/data/config
 
 jobs:
   update-config:
+    name: Update Configuration Files
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout Code
@@ -33,7 +34,7 @@ jobs:
           echo "::set-output name=config-url::${REMOTE_RAW_URL_BASE}/${REMOTE_REPO_OWNER}/${REMOTE_REPO_NAME}/${REMOTE_CONFIG_PATH}/${REMOTE_CONFIG_PROFILE}"
           echo "::set-output name=staging-folder::$(mktemp -dt job-staging.XXXXXXX)"
           echo "::set-output name=branch-name::update-config-$(date -u -d @${EPOCH} +%Y%m%d-%H%M%S)"
-          echo "::set-output name=update-time::$(date -u -d @${EPOCH} +%Y-%m-%d %H:%M:%S)"
+          echo "::set-output name=update-time::$(date -u -d @${EPOCH})"
 
       - name: Download Configuration Files
         run: |
@@ -98,12 +99,12 @@ jobs:
           body: |
             ### Description
             
-            Automated Update of the Hedera Node Configuration Files from the official `${REMOTE_REPO_OWNER}/${REMOTE_REPO_NAME}` repository.
+            Automated Update of the Hedera Node Configuration Files from the official `${{ env.REMOTE_REPO_OWNER }}/${{ env.REMOTE_REPO_NAME }}` repository.
             
             #### Update Details
             
-            **Detection Date/Time:** ${{ steps.params.outputs.update-time }}
-            **Detection Branch:** ${{ steps.params.outputs.branch-name }}
+            **Detection Date/Time:** `${{ steps.params.outputs.update-time }}`
+            **Detection Branch:** `${{ steps.params.outputs.branch-name }}`
 
           token: ${{ secrets.GITHUB_TOKEN }}
           branch: ${{ steps.params.outputs.branch-name }}
