--- a/compose-network/network-node/data/config/api-permission.properties
+++ b/compose-network/network-node/data/config/api-permission.properties
@@ -9,6 +9,7 @@ getAccountRecords=0-*
 getTxRecordByTxID=0-*
 getTransactionReceipts=0-*
 approveAllowances=0-*
+adjustAllowances=0-*
 deleteAllowances=0-*
 # File
 createFile=0-*
@@ -63,4 +64,3 @@ networkGetExecutionTime=2-50
 systemDelete=2-59
 systemUndelete=2-60
 freeze=2-58
-getAccountDetails=2-50
