--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hedera-local",
+  "name": "@hashgraph/hedera-local",
   "version": "1.0.0",
   "description": "Developer tooling for running Local Hedera Network (Consensus + Mirror Nodes).",
   "homepage": "https://github.com/hashgraph/hedera-local-node",
