--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "dependencies": {
     "@hashgraph/hethers": "^1.0.3",
-    "@hashgraph/sdk": "2.7.0-beta.4",
+    "@hashgraph/sdk": "2.15.0",
     "js-yaml": "^4.1.0",
     "rimraf": "^3.0.2",
     "shelljs": "^0.8.5"
