--- a/compose-network/network-node/data/config/bootstrap.properties
+++ b/compose-network/network-node/data/config/bootstrap.properties
@@ -1,2 +1,4 @@
 ledger.id=0x02
-netty.mode=DEV
+contracts.chainId=297
+hedera.recordStream.recordFileVersion=6
+hedera.recordStream.signatureFileVersion=6
