Revert .env changes
Signed-off-by: nikolay <n.atanasow94@gmail.com>

--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ HAVEGED_IMAGE_TAG=0.27.4
 #### Java Process Settings ####
 PLATFORM_JAVA_HEAP_MIN=256m
 PLATFORM_JAVA_HEAP_MAX=2g
-PLATFORM_JAVA_OPTS=
+PLATFORM_JAVA_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseZGC -Xlog:gc*:gc.log"
 
 #### Bind Mount Settings ####
 NETWORK_NODE_LOGS_ROOT_PATH=./network-logs/node
