--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "hedera-local"
   ],
   "bin": {
-    "hedera-local": "./cli.js"
+    "hedera": "./cli.js"
   },
   "dependencies": {
     "@hashgraph/hethers": "^1.1.2",
