--- a/compose-network/network-node/data/config/bootstrap.properties
+++ b/compose-network/network-node/data/config/bootstrap.properties
@@ -2,3 +2,5 @@ ledger.id=0x01
 netty.mode=DEV
 contracts.chainId=296
 hedera.recordStream.logPeriod=1
+balances.exportPeriodSecs=400
+files.maxSizeKb=2048
