Enable sidecar file for mirror node
Signed-off-by: Steven Sheehy <steven.sheehy@swirldslabs.com>

--- a/compose-network/mirror-node/application.yml
+++ b/compose-network/mirror-node/application.yml
@@ -9,6 +9,8 @@ hedera:
           entity:
             redis:
               enabled: false
+          sidecar:
+            enabled: true
       downloader:
         accessKey: minioadmin
         cloudProvider: "S3"
