Add sidecar config
Signed-off-by: nikolay <n.atanasow94@gmail.com>

--- a/compose-network/network-node/data/config/bootstrap.properties
+++ b/compose-network/network-node/data/config/bootstrap.properties
@@ -5,3 +5,5 @@ hedera.recordStream.recordFileVersion=6
 hedera.recordStream.signatureFileVersion=6
 hedera.recordStream.enableTraceabilityMigration=true
 hedera.recordStream.compressFilesOnCreation=true
+hedera.recordStream.sidecarDir=sidecar
+contracts.sidecars=CONTRACT_STATE_CHANGE,CONTRACT_BYTECODE,CONTRACT_ACTION
