Add support for multiple configs
Signed-off-by: Maksim Dimitrov <dimitrov.maksim@gmail.com>

--- a/configs/application.template.yml
+++ b/configs/application.template.yml
@@ -10,7 +10,7 @@ hedera:
             redis:
               enabled: false
           sidecar:
-            enabled: false
+            enabled: {{enabled}}
       downloader:
         accessKey: minioadmin
         cloudProvider: "S3"
