--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -306,7 +306,7 @@ services:
     ports:
       - "7546:7546"
     restart: unless-stopped
-    tty: true
+    tty: false
 
 networks:
   network-node-bridge:
