Refactor cli options and commands
Signed-off-by: Maksim Dimitrov <dimitrov.maksim@gmail.com>

--- a/.env
+++ b/.env
@@ -59,4 +59,4 @@ RELAY_SERVER_PORT=7546
 RELAY_E2E_HOST=http://127.0.0.1:7546
 
 #### Record Stream Uploader ####
-STREAM_EXTENSION=rcd.gz
+STREAM_EXTENSION=rcd
