Add more configurable properties
Signed-off-by: Maksim Dimitrov <dimitrov.maksim@gmail.com>

--- a/templates/.env.template
+++ b/templates/.env.template
@@ -23,7 +23,7 @@ NETWORK_NODE_MEM_LIMIT=8gb
 #### Uploader Image Prefixes & Tags ####
 UPLOADER_IMAGE_PREFIX=gcr.io/hedera-registry/
 UPLOADER_IMAGE_TAG={{uploaderImageTag}}
-PYTHON_VERSION=python3.9
+PYTHON_VERSION={{pythonVersion}}
 
 #### MirrorNode Prefixes & Tags ####
 MIRROR_IMAGE_PREFIX=gcr.io/mirrornode/
