--- a/templates/bootstrap.template.properties
+++ b/templates/bootstrap.template.properties
@@ -4,3 +4,11 @@ contracts.chainId={{chainId}}
 hedera.recordStream.logPeriod={{logPeriod}}
 balances.exportPeriodSecs={{exportPeriodSecs}}
 files.maxSizeKb={{maxSizeKb}}
+{{#features}}
+hedera.recordStream.recordFileVersion={{recordFileVersion}}
+hedera.recordStream.signatureFileVersion={{signatureFileVersion}}
+hedera.recordStream.enableTraceabilityMigration={{enableTraceabilityMigration}}
+hedera.recordStream.compressFilesOnCreation={{compressFilesOnCreation}}
+hedera.recordStream.sidecarDir={{sidecarDir}}
+contracts.sidecars={{sidecars}}
+{{/features}}
