feat: add envoy-proxy container
Signed-off-by: Ivo Yankov <ivo@devlabs.bg>

--- a/templates/.env.template
+++ b/templates/.env.template
@@ -69,3 +69,7 @@ ETH_GET_LOGS_BLOCK_RANGE_LIMIT={{blockRangeLimit}}
 
 #### Record Stream Uploader ####
 STREAM_EXTENSION={{streamExtension}}
+
+#### ENVOY ####
+ENVOY_IMAGE_PREFIX=envoyproxy/
+ENVOY_IMAGE_TAG=v1.22.0
