fix: revert accidental change
Signed-off-by: Ivo Yankov <ivo@devlabs.bg>

--- a/.github/workflows/browser-tests.yaml
+++ b/.github/workflows/browser-tests.yaml
@@ -30,7 +30,7 @@ jobs:
           cache: npm
 
       - name: Install dependencies
-        run:
+        run: npm ci
 
       - name: Install Docker Compose
         run: |
