fix: wrong path in ci
Signed-off-by: Ivo Yankov <ivo@devlabs.bg>

--- a/.github/workflows/browser-tests.yaml
+++ b/.github/workflows/browser-tests.yaml
@@ -42,7 +42,7 @@ jobs:
 
       - name: Prepare and run the tests
         run: |
-          cd test/e2e
+          cd test/cypress
           npm ci
           npm run build
           npm run start
