feat: add a flag to control relay rate limit
Signed-off-by: Ivo Yankov <ivo@devlabs.bg>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -356,6 +356,7 @@ services:
       HBAR_RATE_LIMIT_TINYBAR: "${HBAR_RATE_LIMIT_TINYBAR}"
       HBAR_RATE_LIMIT_DURATION: "${HBAR_RATE_LIMIT_DURATION}"
       ETH_GET_LOGS_BLOCK_RANGE_LIMIT: "${ETH_GET_LOGS_BLOCK_RANGE_LIMIT}"
+      RATE_LIMIT_DISABLED: "${RELAY_RATE_LIMIT_DISABLED}"
     ports:
       - "7546:7546"
     restart: unless-stopped
