--- a/templates/local/.env.template
+++ b/templates/local/.env.template
@@ -63,6 +63,7 @@ TIER_1_RATE_LIMIT={{tier1Limit}}
 TIER_2_RATE_LIMIT={{tier2Limit}}
 TIER_3_RATE_LIMIT={{tier3Limit}}
 LIMIT_DURATION={{limitDuration}}
+RELAY_RATE_LIMIT_DISABLED=false
 HBAR_RATE_LIMIT_TINYBAR={{hbarLimit}}
 HBAR_RATE_LIMIT_DURATION={{hbarLimitDuration}}
 ETH_GET_LOGS_BLOCK_RANGE_LIMIT={{blockRangeLimit}}
