--- a/templates/.env.template
+++ b/templates/.env.template
@@ -57,6 +57,7 @@ RELAY_MIRROR_NODE_URL=http://mirror-node-rest:5551
 RELAY_LOCAL_NODE=true
 RELAY_SERVER_PORT=7546
 RELAY_E2E_HOST=http://127.0.0.1:7546
+RELAY_RATE_LIMIT_DISABLED=false
 
 #### Record Stream Uploader ####
 STREAM_EXTENSION={{streamExtension}}
