--- a/package.json
+++ b/package.json
@@ -13,18 +13,22 @@
   "bin": {
     "hedera": "./cli.js"
   },
+  "scripts": {
+    "test:readiness": "node src/utils/testNode.js"
+  },
   "dependencies": {
     "@hashgraph/hethers": "^1.1.2",
     "@hashgraph/sdk": "2.18.5",
     "blessed": "^0.1.81",
     "blessed-contrib": "^4.11.0",
     "dockerode": "^3.3.4",
+    "dotenv": "^16.0.3",
     "ethers": "^5.6.9",
     "js-yaml": "^4.1.0",
+    "mustache": "^4.2.0",
     "rimraf": "^3.0.2",
     "shelljs": "^0.8.5",
-    "yargs": "^17.5.1",
-    "mustache": "^4.2.0"
+    "yargs": "^17.5.1"
   },
   "devDependencies": {
     "hardhat": "^2.11.2"
