feat: add an option to enable dev mode
Signed-off-by: Ivo Yankov <ivo@devlabs.bg>

--- a/templates/local/.env.template
+++ b/templates/local/.env.template
@@ -67,6 +67,7 @@ RELAY_RATE_LIMIT_DISABLED=false
 HBAR_RATE_LIMIT_TINYBAR={{hbarLimit}}
 HBAR_RATE_LIMIT_DURATION={{hbarLimitDuration}}
 ETH_GET_LOGS_BLOCK_RANGE_LIMIT={{blockRangeLimit}}
+DEV_MODE={{devMode}}
 
 #### Record Stream Uploader ####
 STREAM_EXTENSION={{streamExtension}}
