--- a/.env
+++ b/.env
@@ -58,6 +58,7 @@ RELAY_LOCAL_NODE=true
 RELAY_SERVER_PORT=7546
 RELAY_E2E_HOST=http://127.0.0.1:7546
 RELAY_RATE_LIMIT_DISABLED=false
+DEV_MODE=false
 
 #### Record Stream Uploader ####
 STREAM_EXTENSION=rcd
