--- a/.env
+++ b/.env
@@ -16,6 +16,7 @@ PLATFORM_JAVA_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseZGC -Xlog:gc*:gc.lo
 NETWORK_NODE_LOGS_ROOT_PATH=./network-logs/node
 APPLICATION_ROOT_PATH=./compose-network/network-node
 APPLICATION_CONFIG_PATH=./compose-network/network-node/data/config
+RECORD_PARSER_ROOT_PATH=./src/record-parser
 
 #### Network Node Memory Limits ####
 NETWORK_NODE_MEM_LIMIT=8gb
