fix: add missing env vars
Signed-off-by: Ivo Yankov <ivo@devlabs.bg>

--- a/.env
+++ b/.env
@@ -66,3 +66,14 @@ STREAM_EXTENSION=rcd
 #### ENVOY ####
 ENVOY_IMAGE_PREFIX=envoyproxy/
 ENVOY_IMAGE_TAG=v1.22.0
+
+#### Mirror Node Explorer Prefixes & Tags ####
+MIRROR_NODE_EXPLORER_IMAGE_PREFIX=glazarov95/
+MIRROR_NODE_EXPLORER_IMAGE_TAG=latest
+
+### Mirror Node Explorer ###
+VUE_APP_PRODUCT_NAME="Hedera Mirror Node Explorer"
+VUE_APP_DOCUMENT_TITLE_PREFIX="Hedera"
+VUE_APP_ENABLE_STAKING=true
+VUE_APP_LOCAL_MIRROR_NODE_MENU_NAME=LOCALNET
+VUE_APP_LOCAL_MIRROR_NODE_URL='http://localhost:5551/'
