--- a/templates/.env.template
+++ b/templates/.env.template
@@ -69,7 +69,7 @@ ENVOY_IMAGE_PREFIX=envoyproxy/
 ENVOY_IMAGE_TAG=v1.22.0
 
 #### Mirror Node Explorer Prefixes & Tags ####
-MIRROR_NODE_EXPLORER_IMAGE_PREFIX=glazarov95/
+MIRROR_NODE_EXPLORER_IMAGE_PREFIX=gcr.io/hedera-registry/
 MIRROR_NODE_EXPLORER_IMAGE_TAG={{mirrorNodeExplorerImageTag}}
 
 ### Mirror Node Explorer ###
