--- a/templates/local/bootstrap.template.properties
+++ b/templates/local/bootstrap.template.properties
@@ -11,4 +11,8 @@ hedera.recordStream.enableTraceabilityMigration={{enableTraceabilityMigration}}
 hedera.recordStream.compressFilesOnCreation={{compressFilesOnCreation}}
 contracts.sidecars={{sidecars}}
 contracts.precompile.atomicCryptoTransfer.enabled={{atomicCryptoTransfer}}
+autoCreation.enabled={{autoCreation}}
+lazyCreation.enabled={{lazyCreation}}
+cryptoCreateWithAliasAndEvmAddress.enabled={{cryptoCreateWithAliasAndEvmAddress}}
+contracts.evm.version={{evm}}
 {{/features}}
