--- a/compose-network/network-node/data/config/bootstrap.properties
+++ b/compose-network/network-node/data/config/bootstrap.properties
@@ -10,3 +10,7 @@ hedera.recordStream.enableTraceabilityMigration=true
 hedera.recordStream.compressFilesOnCreation=true
 contracts.sidecars=CONTRACT_STATE_CHANGE,CONTRACT_BYTECODE
 contracts.precompile.atomicCryptoTransfer.enabled=true
+autoCreation.enabled=true
+lazyCreation.enabled=true
+cryptoCreateWithAliasAndEvmAddress.enabled=true
+contracts.evm.version=v0.34
