--- a/docker-compose.evm.yml
+++ b/docker-compose.evm.yml
@@ -3,15 +3,19 @@ services:
   record-streams-uploader:
     restart: "no"
     entrypoint: ["echo", "This container is intentionally disabled by the EVM profile."]
+    command: []
   account-balances-uploader:
     restart: "no"
     entrypoint: [ "echo", "This container is intentionally disabled by the EVM profile." ]
+    command: []
   record-sidecar-uploader:
     restart: "no"
     entrypoint: [ "echo", "This container is intentionally disabled by the EVM profile." ]
+    command: []
   minio:
     restart: "no"
     entrypoint: [ "echo", "This container is intentionally disabled by the EVM profile." ]
+    command: []
   importer:
     volumes:
       - "${NETWORK_NODE_LOGS_ROOT_PATH}/accountBalances:/streams/balances"
