fix: update bind mounts to match the S3 bucket format
Signed-off-by: Nathan Klick <nathan@swirldslabs.com>

--- a/docker-compose.evm.yml
+++ b/docker-compose.evm.yml
@@ -18,5 +18,5 @@ services:
     command: []
   importer:
     volumes:
-      - "${NETWORK_NODE_LOGS_ROOT_PATH}/accountBalances:/streams/balances"
-      - "${NETWORK_NODE_LOGS_ROOT_PATH}/recordStreams:/streams/records"
+      - "${NETWORK_NODE_LOGS_ROOT_PATH}/accountBalances:/streams/accountBalances"
+      - "${NETWORK_NODE_LOGS_ROOT_PATH}/recordStreams:/streams/recordstreams"
