update bootstrap to match testnet configuration
Signed-off-by: Nathan Klick <nathan@swirldslabs.com>

--- a/compose-network/network-node/data/config/bootstrap.properties
+++ b/compose-network/network-node/data/config/bootstrap.properties
@@ -2,7 +2,8 @@ ledger.id=0x01
 netty.mode=DEV
 contracts.chainId=298
 hedera.recordStream.logPeriod=1
-balances.exportPeriodSecs=400
+balances.exportPeriodSecs=60
+balances.compressOnCreation=true
 files.maxSizeKb=2048
 hedera.recordStream.recordFileVersion=6
 hedera.recordStream.signatureFileVersion=6
