--- a/.github/workflows/zxf-publish-docker-images.yaml
+++ b/.github/workflows/zxf-publish-docker-images.yaml
@@ -73,7 +73,7 @@ jobs:
         uses: google-github-actions/setup-gcloud@62d4898025f6041e16b1068643bfc5a696863587 # pinned to v1.1.0
 
       - name: Retrieve the Build Artifact
-        run: gsutil cp "gs://hedera-platform-builds/build-${{ steps.extract.outputs.tag }}.zip"
+        run: gsutil cp "gs://hedera-platform-builds/build-${{ steps.extract.outputs.tag }}.zip" .
 
       - name: Retrieve the Artifact Checksum/Hash
         run: gsutil cp "gs://hedera-platform-builds/build-${{ steps.extract.outputs.tag }}.sha384" .
