--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@ NETWORK_NODE_IMAGE_PREFIX=gcr.io/hedera-registry/
 NETWORK_NODE_IMAGE_NAME=main-network-node
 
 #### Image Tags/Hashes ####
-NETWORK_NODE_IMAGE_TAG=0.35.0-alpha.6
-HAVEGED_IMAGE_TAG=0.35.0-alpha.6
+NETWORK_NODE_IMAGE_TAG=0.36.0-alpha.1
+HAVEGED_IMAGE_TAG=0.36.0-alpha.1
 
 #### Java Process Settings ####
 PLATFORM_JAVA_HEAP_MIN=256m
@@ -28,7 +28,7 @@ PYTHON_VERSION=python3.7
 
 #### MirrorNode Prefixes & Tags ####
 MIRROR_IMAGE_PREFIX=gcr.io/mirrornode/
-MIRROR_IMAGE_TAG=0.75.0-rc3
+MIRROR_IMAGE_TAG=0.76.0
 
 #### MirrorNode settings ####
 MIRROR_POSTGRES_IMAGE=postgres:14-alpine
@@ -44,7 +44,7 @@ MINIO_ROOT_PASSWORD=minioadmin
 
 #### JSON RPC Relay Prefixes & Tags ####
 RELAY_IMAGE_PREFIX=ghcr.io/hashgraph/
-RELAY_IMAGE_TAG=0.18.0
+RELAY_IMAGE_TAG=0.19.0
 
 #### JSON RPC Relay limits ####
 RELAY_MEM_LIMIT=512m
