--- a/templates/bootstrap.template.properties
+++ b/templates/bootstrap.template.properties
@@ -5,8 +5,7 @@ hedera.recordStream.logPeriod={{logPeriod}}
 balances.exportPeriodSecs={{exportPeriodSecs}}
 files.maxSizeKb={{maxSizeKb}}
 {{#features}}
-hedera.recordStream.recordFileVersion={{recordFileVersion}}
-hedera.recordStream.signatureFileVersion={{signatureFileVersion}}
 hedera.recordStream.enableTraceabilityMigration={{enableTraceabilityMigration}}
 hedera.recordStream.compressFilesOnCreation={{compressFilesOnCreation}}
+balances.compressOnCreation={{compressOnCreation}}
 {{/features}}
