--- a/compose-network/network-node/data/config/bootstrap.properties
+++ b/compose-network/network-node/data/config/bootstrap.properties
@@ -4,5 +4,6 @@ contracts.chainId=298
 hedera.recordStream.logPeriod=1
 balances.exportPeriodSecs=400
 files.maxSizeKb=2048
+hedera.recordStream.enableTraceabilityMigration=
 hedera.recordStream.compressFilesOnCreation=true
-contracts.precompile.atomicCryptoTransfer.enabled=true
+balances.compressOnCreation=true
