remove sidecar old files also
Signed-off-by: georgi-l95 <glazarov95@gmail.com>

--- a/docker-compose.evm.yml
+++ b/docker-compose.evm.yml
@@ -30,7 +30,7 @@ services:
       "echo",
       "Deleting old sidecars files.",
       "&&",
-      "rm -rf /records/sidecars/*",
+      "rm -rf /sidecar-files/*",
       "&&",
       "echo",
       "This container is intentionally disabled by the EVM profile."
