--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -201,8 +201,8 @@ services:
       ROSETTA_PASSWORD: mirror_rosetta_pass
     networks:
       - mirror-node
-    expose:
-      - "5432"
+    ports:
+      - "5432:5432"
     restart: unless-stopped
     stop_grace_period: 2m
     stop_signal: SIGTERM
