--- a/docker-compose.evm.yml
+++ b/docker-compose.evm.yml
@@ -60,3 +60,4 @@ services:
     volumes:
       - "${NETWORK_NODE_LOGS_ROOT_PATH}/accountBalances/:/node/streams/accountBalances/"
       - "${NETWORK_NODE_LOGS_ROOT_PATH}/recordStreams/:/node/streams/recordstreams/"
+    #comment
